# rust_iso15924

./: Cargo.toml  README.md
scripts/: 15924.txt  generate.py
src/: lib.rs
