[package]
name = "rust_iso15924"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description="ISO 639 is a standardized nomenclature used to classify languages. Each language is assigned a two-letter (639-1) and three-letter (639-2 and 639-3) lowercase abbreviation, amended in later versions of the nomenclature."
repository="https://github.com/rust-iso/rust_iso15924"
license="Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = ["scripts/*"]
documentation = "https://docs.rs/rust_iso15924/"


keywords=[ "ISO15924","bcp47", "RFC5646"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phf = { version = "^0.11.1", features = ["macros"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
prettytable-rs = "^0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "^0.2.83"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "^0.3.33"
